# GameCourseProject

./: Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h  CMakeLists.txt  Camera.cpp  Camera.h  EntityFactory.cpp  EntityFactory.h  Game.cpp  Game.h  Hero.cpp  Hero.h  Level.cpp  Level.h  SubjectFactory.cpp  SubjectFactory.h  level.hpp  main.cpp
Animation/: Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h
Entities/: BigBamboni.cpp  BigBamboni.h  Entity.cpp  Entity.h  HeroEntity.cpp  HeroEntity.h  SlimeEntity.h  SmallBamboni.cpp  SmallBamboni.h  ZombieEntity.cpp
Factories/: EntityFactory.cpp  EntityFactory.h  SubjectFactory.cpp  SubjectFactory.h
Level/: Level.cpp  Level.h
Levels/level1/: level.tmx
Levels/level2/: level.tmx
Subjects/: Coin.cpp  Coin.h  Key.cpp  Key.h  Padlock.cpp  Padlock.h  Subject.cpp  Subject.h
TinyXML/: tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp  xmltest.cpp
TinyXML2/: tinyxml2.cpp  tinyxml2.h
entities/: Entity.cpp  Entity.h  HeroEntity.cpp  HeroEntity.h  SlimeEntity.cpp  SlimeEntity.h  ZombieEntity.cpp  ZombieEntity.h
